# zvec

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
.github/: CODEOWNERS
.github/cmake/subproject-integration/: CMakeLists.txt
.github/workflows/: 01-ci-pipeline.yml  03-macos-linux-build.yml  04-android-build.yml  05-ios-build.yml  05-windows-build.yml  06-ios-build.yml  07-linux-riscv-build.yml  08-cmake-subproject-integration.yml  android_build.yml  auto-assign.yml  community-pr-handler.yml  main.yml  nightly_coverage.yml
cmake/: bazel.cmake  option.cmake
examples/c/: CMakeLists.txt
examples/c++/: CMakeLists.txt
python/tests/: test_gil_release.py
python/tests/detail/: test_collection_dql.py
python/zvec/: __init__.py  zvec.py
scripts/: build_ios.sh  gcov.sh
src/: CMakeLists.txt
src/ailego/: CMakeLists.txt
src/ailego/utility/: memory_helper.cc  time_helper.cc
src/binding/c/: CMakeLists.txt
src/binding/python/model/: python_collection.cc
src/core/: CMakeLists.txt
src/core/algorithm/diskann/: CMakeLists.txt  diskann_util.h
src/core/algorithm/hnsw/: hnsw_streamer_entity.h
src/core/interface/: index.cc  index_param.cc  vector_source.cc
src/core/interface/indexes/: diskann_index.cc
src/db/: CMakeLists.txt  collection.cc
src/db/common/: CMakeLists.txt
src/db/index/column/fts_column/posting/: bitpacked_posting_list.cc
src/db/index/segment/: segment.cc  segment.h
src/include/zvec/: export.h
src/include/zvec/ailego/buffer/: block_eviction_queue.h  vector_page_table.h
src/include/zvec/ailego/container/: params.h
src/include/zvec/ailego/internal/: platform.h
src/include/zvec/ailego/io/: file.h  mmap_file.h
src/include/zvec/ailego/logger/: logger.h
src/include/zvec/ailego/parallel/: thread_pool.h
src/include/zvec/ailego/utility/: file_helper.h  float_helper.h  string_helper.h  time_helper.h
src/include/zvec/core/interface/: index.h  index_factory.h  index_param.h  vector_source.h
src/include/zvec/db/: collection.h  config.h  doc.h  index_params.h  query.h  query_params.h  reranker.h  schema.h  stats.h  status.h
src/include/zvec/turbo/: turbo.h
src/turbo/: CMakeLists.txt
tests/: CMakeLists.txt
tests/c/: c_api_test.c
tests/core/: CMakeLists.txt
tests/core/algorithm/diskann/: CMakeLists.txt
tests/core/utility/: CMakeLists.txt
tests/db/: collection_test.cc
tests/db/crash_recovery/: collection_optimizer.cc
tests/db/sqlengine/: mock_segment.h
tests/shared/: CMakeLists.txt  shared_api_test.cc
tools/db/: CMakeLists.txt
